k8s/posse-party/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: posse-party
  labels:
    app: posse-party

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posse-party
  namespace: posse-party
  labels:
    app: posse-party
  annotations:
    diun.enable: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posse-party
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: posse-party
      annotations:
        diun.enable: "true"
    spec:
      containers:
        - name: posse-party
          image: ghcr.io/searlsco/posse_party:latest
          imagePullPolicy: Always
          command:
            - ./script/server
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
