k8s/posse-party/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posse-party-worker
  namespace: posse-party
  labels:
    app: posse-party-worker
  annotations:
    diun.enable: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posse-party-worker
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: posse-party-worker
      annotations:
        diun.enable: "true"
    spec:
      containers:
        - name: posse-party-worker
          image: ghcr.io/searlsco/posse_party:latest
          imagePullPolicy: Always
          command:
            - ./script/worker
