k8s/posse-party/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posse-party
  namespace: posse-party
  labels:
    app: posse-party
spec:
  type: ClusterIP
  selector:
    app: posse-party
  ports:
    - name: http
      port: 3000
      targetPort: http
